--- a/app/templates/tasks/create_old.html
+++ b/app/templates/tasks/create_old.html
@@ -153,7 +153,7 @@ def sync_mysql_accounts(instance, config):
         conn = psycopg.connect(
             host=instance.host,
             port=instance.port,
-            database=instance.database_name or 'postgres',
+            dbname=instance.database_name or 'postgres',
             user=instance.credential.username,
             password=instance.credential.get_plain_password()
         )
@@ -253,7 +253,7 @@ def sync_mysql_accounts(instance, config):
         conn = psycopg.connect(
             host=instance.host,
             port=instance.port,
-            database=instance.database_name or 'postgres',
+            dbname=instance.database_name or 'postgres',
             user=instance.credential.username,
             password=instance.credential.get_plain_password()
         )
